# AI_solo_coder_task_B_034

./: README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml  test_full_output.txt  test_output.txt
backend/src/: alarm_bridge.rs  alerts.rs  api.rs  config.rs  db.rs  degradation_predictor.rs  efficiency_analyzer.rs  gp_inference_service.rs  hydrogen_leak_detector.rs  leak_detector.rs  lib.rs  main.rs  mea_diagnoser.rs  mea_diagnostics.rs  metrics.rs  models.rs  optimization.rs  optimization_engine.rs  profinet.rs  profinet_driver.rs  renewable_coupler.rs  renewable_integrator.rs
clickhouse/: config.xml  init.sql
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: style.css
frontend/js/: api.js  canvas.js  charts.js  degradation_predictor.js  leak_detector.js  main.js  mea_diagnoser.js  renewable_integrator.js  stack_profile.js
simulator/: Dockerfile  profinet_simulator.py
