[package]
name = "pem_electrolyzer"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
env_logger = "0.11"
config = "0.14"
toml = "0.8"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
byteorder = "1.5"
crc = "3.0"
futures = "0.3"
opcua = "0.12"
approx = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
axum-prometheus = "0.7"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
